--- a/Bidal.html
+++ b/Bidal.html
@@ -50,7 +50,7 @@
     <button class="button">Add to Cart</button>
 </div>
 <div class="product">
-    <img src="C:\Users\pniha\OneDrive\Desktop\HCI\Lipstick.jpg" alt="Lipstick">
+    <img src="Lipstick.jpg" alt="Lipstick">
     <h3>Lipstick</h3>
     <p>MRP: ₹599</p>
     <button class="button">Add to Cart</button>
