--- a/Bidal.html
+++ b/Bidal.html
@@ -44,7 +44,7 @@
 	
      
 <div class="product">
-    <img src="C:\Users\pniha\OneDrive\Desktop\HCI\foundation.jpg"alt="Luxury Foundation">
+    <img src="foundation.jpg"alt="Luxury Foundation">
     <h3>Luxury Foundation</h3>
     <p>MRP: ₹1051</p>
     <button class="button">Add to Cart</button>
@@ -57,7 +57,7 @@
 </div>
 
 <div class="product">
-    <img src="C:\Users\pniha\OneDrive\Desktop\HCI\Mascara.jpg" alt="Mascara">
+    <img src="Mascara.jpg" alt="Mascara">
     <h3>Mascara</h3>
     <p>MRP: ₹479</p>
     <button class="button">Add to Cart</button>
@@ -70,38 +70,38 @@
     <button class="button">Add to Cart</button>
 </div>
 <div class="product">
-    <img src="C:\Users\pniha\OneDrive\Desktop\HCI\kajal+Eyeliner.jpg" alt="Kajal+Eye Liner">
+    <img src="kajal+Eyeliner.jpg" alt="Kajal+Eye Liner">
     <h3>Kajal+Eye Liner</h3>
     <p>MRP: ₹169</p>
     <button class="button">Add to Cart</button>
 </div>
 
 <div class="product">
-    <img src="C:\Users\pniha\OneDrive\Desktop\HCI\NAILPOLISH.JPG" alt="Nail Polish">
+    <img src="NAILPOLISH.JPG" alt="Nail Polish">
     <h3>Nail Polish</h3>
     <p>MRP: ₹199</p>
     <button class="button">Add to Cart</button>
 </div>
 <div class="product">
-<img src="C:\Users\pniha\OneDrive\Desktop\HCI\primer.jpg" alt="Primer">
+<img src="primer.jpg" alt="Primer">
     <h3>Primer</h3>
     <p>MRP: ₹249</p>
     <button class="button">Add to Cart</button>
 </div>
 <div class="product">
-<img src="C:\Users\pniha\OneDrive\Desktop\HCI\sunscreen+moisturizer.jpg" alt="Sunscreen moisturizer">
+<img src="sunscreen+moisturizer.jpg" alt="Sunscreen moisturizer">
     <h3>Sunscreen moisturizer</h3>
     <p>MRP: ₹399</p>
     <button class="button">Add to Cart</button>
 </div>
 <div class="product">
-<img src="C:\Users\pniha\OneDrive\Desktop\HCI\lip gloss.jpg" alt="Lip Gloss">
+<img src="lip gloss.jpg" alt="Lip Gloss">
     <h3>Lip Gloss</h3>
     <p>MRP: ₹129</p>
     <button class="button">Add to Cart</button>
 </div>
 <div class="product">
-<img src="C:\Users\pniha\OneDrive\Desktop\HCI\brushes set with beauty blender.jpg" alt="Brushes&Blender">
+<img src="brushes set with beauty blender.jpg" alt="Brushes&Blender">
     <h3>Brushes&Blender</h3>
     <p>MRP: ₹319</p>
     <button class="button">Add to Cart</button>
