--- a/Bidal.html
+++ b/Bidal.html
@@ -58,7 +58,7 @@
         <button class="add-to-cart button">Add to Cart</button>
       </div>
       <div class="product" data-id="4">
-        <img src="C:\Users\pniha\OneDrive\Desktop\HCI\MAKEUP KIT.jpg" alt="MakeUp Kit">
+        <img src="MAKEUP KIT.jpg" alt="MakeUp Kit">
         <h3>MakeUp Kit</h3>
         <p>MRP: ₹258</p>
         <button class="add-to-cart button">Add to Cart</button>
